infrastructure/observability/traces/otel-collector.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-http
  namespace: infra-observability
  labels:
    app.kubernetes.io/name: tempo
spec:
  ingressClassName: nginx
  rules:
  - host: ${otlpHostName}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: otel-collector-opentelemetry-collector
            port:
              number: 4318
